Some notes on collectors